atualização do programa para ultima entrega

--- a/src/tela/tela.html
+++ b/src/tela/tela.html
@@ -181,7 +181,7 @@
             <div class="cart-total">
                 Total: <span id="cartTotal">R$ 0,00</span>
             </div>
-            <button class="checkout-button">Continuar para o pagamento</button>
+            <button class="checkout-button">Continuar para revisão do pedido</button>
         </div>
     </div>
     <script src="filters.js"></script>
